Fix vertical clipping on statusbar

--- a/public/styles.css
+++ b/public/styles.css
@@ -22,17 +22,18 @@ body {
 
 #logwindow {
     position: fixed;
-    right: 10px; bottom: 20px;
+    right: 10px;
+    bottom: 20px;
     z-index: 0;
     width: 500px;
-    height:370px;
+    height: 370px;
     --window-background-color: #b1b1b1;
 }
 
 #logarea {
-    width:470px;
-    height:320px;
-    resize:none;
+    width: 470px;
+    height: 320px;
+    resize: none;
 }
 
 .window-body {
@@ -79,6 +80,7 @@ input {
 .window.closing {
     animation: closeAnim 0.25s ease-in-out forwards;
 }
+
 .window.opening {
     animation: openAnim 0.25s ease-out forwards;
 }
@@ -93,9 +95,14 @@ input {
 
 #dialog-failed {
     --window-background-color: #ff4848;
-    height: 210px; 
+    height: 210px;
 }
 
 #dialog-failed .window-body {
     height: 120px;
+}
+
+.status-bar-field {
+    max-height: 15px;
+    overflow: hidden;
 }
